tests/errors/undefined/uninitialized.c
// this is a test file for checking: 'Use of an undefined or uninitialized variable.'

int a;
a + 5;